@@ -1,3 +1,8 @@
+2002-11-23  Masatake YAMATO  <jet@gyve.org>
+
+	* src/helper/bezier-utils.c (sp_bezier_fit_cubic_full): fix memry leaks(u, uPrime).
+	This leaks are reported by Michel Schinz <Michel.Schinz@epfl.ch>.
+
 2002-11-22  Lauris Kaplinski  <lauris@kaplinski.com>
 
 	* src/libnrtype/nr-type-gnome.c (nr_typeface_gnome_lookup): Added all
